--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,17 @@
-<section id="content" class="main">
-  <p>SitesUsing is a collaborative collection of what runs the web. You can see what technology a website is using, or what an individual site is using. You can add your own site or fill in the gaps for what tools other sites are using.</p>
-  <ul class="sites">
-    <%= render Site.popular(5) %>
-  </ul>
-</section>
-
-<sidebar>
-  <%= render :partial => "layouts/sidebar/top_tools" %>
-  <%= render :partial => "layouts/sidebar/recent_usings" %>
-</sidebar>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>SitesUsing - Find out what powers the web!</title>
+  <title></title>
+</head>
+<body>
+  <div>
+    <p>Still working on things...</p>
+    
+    <p>
+      If you have an invite code, you can <%= link_to "sign up", new_user_registration_path %>, or if you have
+      a login, you can <%= link_to "sign in", new_user_session_path %>
+    </p>
+  </div>
+</body>
+</html>
