--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -1,3 +1,4 @@
+.clear { clear:both; }
 .right { float:right; }
 p.breadcrumbs { font-size:.8em; }
 a.add { background:url(/images/icons/13-plus.png) no-repeat; padding-left:20px; }
@@ -5,44 +6,88 @@ a.remove { background:url(/images/icons/14-minus.png) no-repeat 0 7px; padding-l
 img.screenshot { border: 1px solid #777; float:left; }
 a.external { font-size:1em; }
 
+/* Tabs */
+/* Very cool tabs from  http://www.simplebits.com/bits/css_tabs.html */
+ul.tabs { height: 34px; padding: 0 20px; background: url(http://static.arcadefly.com/images/helpers/tab_bottom.gif) repeat-x bottom; clear: both; margin:0px 0 20px; }
+ul.tabs li { margin: 0; padding: 0; display: inline; list-style-type: none; }
+ul.tabs a:link, ul.tabs a:visited { float: left; font-weight: bold; padding: 7px 1.2em; margin-right: 8px; border: 1px solid #a3a09e; text-decoration: none; color: #666; height:18px; }
+ul.tabs a { background-color: #f3f3f3; }
+ul.tabs li.current a:link, ul.tabs li.current a:visited { border-bottom: 1px solid #ececec; background: #ececec; color: #000; }
+ul.tabs a:hover { background-color: #fff;	}
+ul.tabs a.arcades { background-color: #dde; }
+ul.tabs a.arcades:hover { background-color: #ccf; }
+ul.tabs a.games { background-color: #fdd; }
+ul.tabs a.games:hover { background-color: #fcc; }
+ul.tabs a.users { background-color: #ded; }
+ul.tabs a.users:hover { background-color: #cec; }
+
 /* Sorting options */
 #sorting { float:right; position:relative; width:250px; }
-#sorting p { float:right; }
-#sorting p a { background:url(/images/icons/13-plus.png) no-repeat right; padding-right:20px; display:block; }
+#sorting p { float:right; width:100%; text-align:right; }
+#sorting p a { background:url(/images/icons/13-plus.png) no-repeat right; display:block; width:14px; height:14px; float:right; margin-left:10px; }
 #sorting p a.active { background:url(/images/icons/14-minus.png) no-repeat right; }
 #sorting ul.options { background-color:#F1F1F1; padding:10px; float:right; z-index:1; clear:left; border: 3px solid #e3e3e3; clear:both; position:absolute; top:20px; border-radius:8px; -moz-border-radius: 8px; width:200px; right:0; }
 
-/* categories#index, sites#index, tools#index */
+/* sites#index, tools#index */
 ul.categories, ul.sites, ul.tools, ul.usings { list-style:none; }
-ul.categories > li, ul.sites > li, ul.tools > li, ul.usings > li { border-bottom:1px solid #c3c0bd; padding-top:1em; }
-
-
-/* categories */
-.categories .title { background:url(/images/icons/19-gear.png) no-repeat top right; min-height:24px; font-weight:normal; }
-
-
-/* tools */
-.tools .title { background:url(/images/icons/157-wrench.png) no-repeat top right; min-height:24px; font-weight:normal; }
+ul.tools li.tool { border-bottom:1px solid #c3c0bd; padding-top:1em; }
+.title_bar { border-bottom:1px solid #ccc; }
+.title_bar h2, .title_bar h3, .title_bar h4 { float:left; }
 
 /* tools#index */
-ul.tools li.tool h4 { font-size:1.2em; font-weight:normal; }
+.tools { clear:both; margin-top:1em; }
+
+/* Lists of sites or tools */
+.ind a.screenshot { float:left; margin-right:10px; width:110px; height:100px; max-width:110px; max-height:100px; }
+.ind a.screenshot img {  max-width:110px; max-height:100px; }
+.ind .title { min-height:60px; }
+.ind .title h4 { display:inline; width:100%; }
+.ind .details { margin-left:130px; min-height:100px; }
+
+.tool ul.count, .tool > ul.sites, .tool ul.categories  { float:right; list-style:none; margin:0; }
+.tool ul.count a, .tool > ul.sites a, .tool ul.categories a { display:block; padding:4px; }
+.tool .title ul.count a { background-color:red; color:white; }
+.tool .title ul.count a:hover { background-color:blue; }
+.tool .title ul.count li.sites a { background-color:red; }
+.tool .title ul.count li.links a { background-color:green; }
+.tool .title p { max-width:435px; }
+.tool .content .sites { float:left; }
+.tool .content .sites li { float:left; margin-right:10px; }
+.tool .content .sites li a { background-color:yellow; }
+.tool .content .categories li { margin-left:10px; float:right; }
+.tool .categories li a { background-color:#ccc; }
 
 /* tools#show, sites#show */
-ul.usings { }
-
-
-
+section.tool a.logo, section.tool a.logo img { max-width:200px; max-height:147px; }
+section.tool .details { margin-left:220px; min-height:200px; }
+section.tool .title p { max-width:680px; }
+section.tool ul.sites { margin-top:20px; }
 
 /* sites */
-.site .title { background:url(/images/icons/55-network.png) no-repeat top right; min-height:24px; font-weight:normal; }
+.site .title { min-height:24px; font-weight:normal; }
 
-/* sites#index */
-ul.sites li.site img.screenshot.small { margin-top:10px; width:100px; height:78px; }
+/* sites#index, tools#show */
+ul.sites li.site img.screenshot.small { width:100px; height:78px; }
 ul.sites li.site .site_info { margin-left: 120px; }
-ul.sites li.site .site_info h4 { font-size:1.2em; padding-left:1.8em; }
+ul.sites li.site .site_info h4 { font-size:1.2em; }
 ul.sites li.site .site_info p.description { line-height:1.1em; }
-ul.sites li.site ul.ranks { list-style:none; float:right; }
-ul.sites li.site ul.ranks li { float:left; padding-left:1em; }
+ul.sites li.site ul.ranks { list-style:none; float:right; border:1px solid #ccc; width:200px; }
+ul.sites li.site ul.ranks li { float:left; clear:left; width:100%; text-align:center; }
+ul.sites li.site ul.ranks li.alexa { border-bottom:1px solid #ccc; }
+ul.sites li.site ul.ranks li.pagerank { position:relative; color:#eee; text-align:left; }
+ul.sites li.site ul.ranks li.pagerank p { width:200px; position:absolute; clear:both;}
+ul.ranks li.pagerank span { display:block; background-color:green; position:absolute; height:1.4em;}
+ul.ranks li.pagerank.pagerank-0 span { width:0px; color:#000; } 
+ul.ranks li.pagerank.pagerank-1 span { width:20px; } 
+ul.ranks li.pagerank.pagerank-2 span { width:40px; } 
+ul.ranks li.pagerank.pagerank-3 span { width:60px; } 
+ul.ranks li.pagerank.pagerank-4 span { width:80px; } 
+ul.ranks li.pagerank.pagerank-5 span { width:100px; } 
+ul.ranks li.pagerank.pagerank-6 span { width:120px; } 
+ul.ranks li.pagerank.pagerank-7 span { width:140px; } 
+ul.ranks li.pagerank.pagerank-8 span { width:160px; } 
+ul.ranks li.pagerank.pagerank-9 span { width:180px; } 
+ul.ranks li.pagerank.pagerank-10 span { width:200px; } 
 
 /* sites#show */
 section.site { }
