--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,15 +1,17 @@
 <% title "Sites" %>
 
 <section id="content" class="main">
-  <h2><%= @title %></h2>
-  <div id="sorting">
-    <p><a href="#" class="change_sorting">Sorting by <%= sorting_name(params[:sort]) %> </a></p>
-    <ul class="options" style="display:none;">
-      <li><%= link_to "Sort by Alexa Rank", sites_path(:sort => :alexa_asc) %></li>
-      <li><%= link_to "Sort by Google PageRank", sites_path(:sort => :google_desc) %></li>
-      <li><%= link_to "Sort by Site Name", sites_path(:sort => :sitename_asc) %></li>
-      <li><%= link_to "Sort by Number of Tools", sites_path(:sort => :tools_desc) %></li>
-    </ul>
+  <div class="title_bar group">
+    <h2><%= @title %></h2>
+    <div id="sorting">
+      <p>Sorting by <%= sorting_name(params[:sort]) %> <a href="#" class="change_sorting"></a></p>
+      <ul class="options" style="display:none;">
+        <li><%= link_to "Sort by Alexa Rank", sites_path(:sort => :alexa_asc) %></li>
+        <li><%= link_to "Sort by Google PageRank", sites_path(:sort => :google_desc) %></li>
+        <li><%= link_to "Sort by Site Name", sites_path(:sort => :sitename_asc) %></li>
+        <li><%= link_to "Sort by Number of Tools", sites_path(:sort => :tools_desc) %></li>
+      </ul>
+    </div>
   </div>
   <section>
     <ul class="sites">
