--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -12,8 +12,8 @@
       <p>We know of <%= pluralize(@site.tools_count, "tool") %> used on this site.</p>
     <% end %>
     <ul class="ranks">
-      <li><%= global_alexa_rank(@site.alexa_global_rank) %></li>
-      <li><%= google_pagerank(@site.google_pagerank) %></li>
+      <li><%= raw global_alexa_rank(@site.alexa_global_rank) %></li>
+      <li><%= raw google_pagerank(@site.google_pagerank) %></li>
     </ul>
   </section>
 
@@ -28,7 +28,7 @@
     <h3>Tools used on <%= @site.title %></h3>
     <% if @site.tools_count > 0 %>
     <ul class="usings">
-      <%= render :partial => 'usings/using_tool', :collection => @site.usings %>
+      <%= render :partial => 'usings/using_tool', :collection => @site.usings.by_sites_count %>
     </ul>
     <% else %>
       <p>We don't know what tools this site uses. <%= link_to "Help us fill in the gaps.", edit_site_tools_path(@site) %></p>
